[gd_scene load_steps=11 format=3 uid="uid://begsl247p1kr"]

[ext_resource type="Script" path="res://GameFiles/GameNavBar.gd" id="1_dxeby"]
[ext_resource type="StyleBox" uid="uid://decp6r3a3avb1" path="res://Assets/Tres/HiraButtons/Hira_Button_Hover.tres" id="3_hibkr"]
[ext_resource type="StyleBox" uid="uid://cokwr0l2xhlwr" path="res://Assets/Tres/HiraButtons/Hira_Button_Pressed.tres" id="4_2xxxi"]
[ext_resource type="Texture2D" uid="uid://b18r0ewmmnq72" path="res://GameFiles/item_icons/Wood Log.png" id="5_vum0m"]
[ext_resource type="Texture2D" uid="uid://bddicg6ay5x1p" path="res://GameFiles/item_icons/Other Item.png" id="7_jhmvg"]
[ext_resource type="PackedScene" uid="uid://du7w1ifwbmq5x" path="res://GameFiles/shop_menu.tscn" id="8_l0605"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bisvu"]
bg_color = Color(0.956863, 0.658824, 0.788235, 1)
border_width_bottom = 15
border_color = Color(0.929412, 0.466667, 0.635294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujfph"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rpxs3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xyo5y"]
load_path = "res://.godot/imported/Rock.png-8b22fa474e0f7a97e25b524e59519a29.ctex"

[node name="GameNavBar" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -288.0
offset_right = 540.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_dxeby")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 270.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(270, 270)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bisvu")
theme_override_styles/hover = ExtResource("3_hibkr")
theme_override_styles/pressed = ExtResource("4_2xxxi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujfph")
text = "1"

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_vum0m")

[node name="Button2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(270, 270)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bisvu")
theme_override_styles/hover = ExtResource("3_hibkr")
theme_override_styles/pressed = ExtResource("4_2xxxi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rpxs3")
text = "2"

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_xyo5y")

[node name="Button3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(270, 270)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bisvu")
theme_override_styles/hover = ExtResource("3_hibkr")
theme_override_styles/pressed = ExtResource("4_2xxxi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rpxs3")
text = "3"

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_jhmvg")

[node name="Button4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(270, 270)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bisvu")
theme_override_styles/hover = ExtResource("3_hibkr")
theme_override_styles/pressed = ExtResource("4_2xxxi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rpxs3")
text = "4"

[node name="TextureRect" type="TextureRect" parent="GridContainer/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_xyo5y")

[node name="ShopMenu" parent="." instance=ExtResource("8_l0605")]
visible = false
position = Vector2(520, -1148)

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_button_4_pressed"]
